src/objects/Vendor_Meter_Exception__c.object
<CustomObject>
    <description>Object captures vendor meter exceptions from the utility.</description>
    <fields>
        <fullName>DASR_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DASR Request</label>
        <referenceTo>DASR_Request__c</referenceTo>
        <relationshipLabel>Vendor Meter Exceptions</relationshipLabel>
        <relationshipName>Vendor_Meter_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_Type_Code__c</fullName>
        <label>Exception Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Vendor Meter Exceptions</relationshipLabel>
        <relationshipName>Vendor_Meter_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meter_Number__c</fullName>
        <label>Meter Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Description__c</fullName>
        <label>Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender_Transaction_ID__c</fullName>
        <label>Sender_Transaction_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Vendor Meter Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VE-{0000000000}</displayFormat>
        <label>Vendor Meter Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Meter Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>